<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/textView"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/textView"
        android:paddingTop="20dp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/textView"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/textView2"
        android:paddingTop="20dp"
        android:textSize="30sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt">

            <Button
                android:id="@+id/buAC"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/buttonNumColor"
                android:onClick="buClear"
                android:text="@string/ac"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buSign"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/buttonNumColor"
                android:onClick="buClick"
                android:text="@string/plus_minus"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buPercent"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/buttonNumColor"
                android:onClick="buPercent"
                android:text="@string/percentile"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buDiv"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/buttonNumColor"
                android:onClick="buOPClick"
                android:text="@string/div"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt">

            <Button
                android:id="@+id/bu7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/buttonNumColor"
                android:onClick="buClick"
                android:text="@string/seven"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bu8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/buttonNumColor"
                android:onClick="buClick"
                android:text="@string/eight"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bu9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/buttonNumColor"
                android:onClick="buClick"
                android:text="@string/nine"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buMul"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/buttonNumColor"
                android:onClick="buOPClick"
                android:text="@string/mul"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt">

            <Button
                android:id="@+id/bu4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/buttonNumColor"
                android:onClick="buClick"
                android:text="@string/four"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bu5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/buttonNumColor"
                android:onClick="buClick"
                android:text="@string/five"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bu6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/buttonNumColor"
                android:onClick="buClick"
                android:text="@string/six"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buMinus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/buttonNumColor"
                android:onClick="buOPClick"
                android:text="@string/minus"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt">

            <Button
                android:id="@+id/bu1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/buttonNumColor"
                android:onClick="buClick"
                android:text="@string/one"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bu2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/buttonNumColor"
                android:onClick="buClick"
                android:text="@string/two"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bu3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/buttonNumColor"
                android:onClick="buClick"
                android:text="@string/three"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buPlus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/buttonNumColor"
                android:onClick="buOPClick"
                android:text="@string/plus"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bu0"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="30pt"
            android:layout_height="30pt"
            android:layout_marginEnd="1pt"
            android:layout_marginRight="1pt"
            android:layout_weight="1"
            android:background="@color/buttonNumColor"
            android:onClick="buClick"
            android:text="@string/zero"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buDot"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="30pt"
            android:layout_height="30pt"
            android:layout_marginEnd="1pt"
            android:layout_marginRight="1pt"
            android:layout_weight="1"
            android:background="@color/buttonNumColor"
            android:onClick="buClick"
            android:text="@string/dot"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buEq"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="30pt"
            android:layout_height="30pt"
            android:layout_marginEnd="1pt"
            android:layout_marginRight="1pt"
            android:layout_weight="1"
            android:background="@color/buttonNumColor"
            android:onClick="buEQClick"
            android:text="@string/equal"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
